#7543 closed bug (fixed)
[ReadOnlyBootPrompt] When changing language welcome message is not translated
Reported by: | taos | Owned by: | bonefish |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | Kits/Locale Kit | Version: | R1/Development |
Keywords: | localization | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description ¶
Using r1a3-rc-hrev41612.
When choosing a language different from English in ReadOnlyBootPrompt the welcome message on the right is not changed.
The length of the translation string was fixed in hrev41542 (#7494), and the current catkeys (at least for Swedish and German) were merged with alpha 3 branch in hrev41609.
Change History (6)
by , 14 years ago
Attachment: | Welcome_to_Haiku.png added |
---|
comment:1 by , 14 years ago
I also spoted this bug. This is the first the users will see when trying out Haiku. The priority should be raised on this one and added to the alpha3 milestone.
comment:2 by , 14 years ago
Owner: | changed from | to
---|---|
Priority: | normal → high |
Status: | new → assigned |
comment:3 by , 14 years ago
Component: | Applications/ReadOnlyBootPrompt → Kits/Locale Kit |
---|---|
Owner: | changed from | to
Status: | assigned → in-progress |
Caused by BHashMapCatalog::SetString()
not processing escaped character in the comment string.
comment:5 by , 14 years ago
Version: | R1/alpha3 → R1/Development |
---|
R1 Alpha 3 has not yet been released. This was with an R1 Alpha 3 Release Candidate image.
Partially localized ReadOnlyBootPrompt.