* BHashMapCatalog::SetString(): Also process escaped characters in the comment.   Fixes #7543 (ReadOnlyBootPrompt only showing English welcome text). * Disabled fingerprint check in linkcatkeys. Fingerprints change due to the   BHashMapCatalog::SetString() change.

+alpha 3


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41629 a95241bf-73f2-0310-859d-f6bbb57e9c96